--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,17 @@
 #work-list{
 	position: relative;
-	top: 100px;
+	top: 50px;
+	padding: 2% 0 0 0;
 	background-color: #f7f7f7;
 }
 
+h2{
+	margin-top: 5%;
+	font-family: 'Merriweather';
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+}
 
 .item-col{
 	padding: 3% 5%;
